# autoclicker

./: CMakeLists.txt  application_widget.cpp  application_widget.h  logger.cpp  logger.h  main.cpp  main_window.cpp  main_window.h  system_api.cpp  system_api.h  system_window_manager.cpp  system_window_manager.h
controls/: auto_clicker.cpp  auto_clicker.h  capture_widget.cpp  capture_widget.h  hp_clicker.cpp  hp_clicker.h  hp_widget.cpp  hp_widget.h  key_selector_widget.cpp  key_selector_widget.h  key_sequence_widget.cpp  key_sequence_widget.h  preferences_widget.cpp  preferences_widget.h  process_widget.cpp  process_widget.h  qcoloredit.cpp  qcoloredit.h  qpointedit.cpp  qpointedit.h  window_selector.cpp  window_selector.h
